--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,19 @@
 arch: s390x
 services:
-    - docker
-script: docker login quay.io -u $ROBOT_USER -p $ROBOTTOKEN && cd s390x && docker build . --tag quay.io/ibmz/alpine:3.12 && docker push quay.io/ibmz/alpine:3.12
+  - docker
+env:
+  global:
+    - TEST_DIR="$PWD/s390x/test/3.12/"
+    - TEST_SCRIPT="test.sh"
+    - BUILD_DIR="$PWD/s390x/"
+    - REPO="quay.io/ibmz/alpine"
+    - TAG="$REPO:3.12"
+before_script: 
+  - cd $BUILD_DIR && chmod +x *
+  - cd $TEST_DIR && chmod +x $TEST_SCRIPT
+  - docker login quay.io -u $ROBOT_USER -p $ROBOTTOKEN
+script: 
+  - docker build $BUILD_DIR --tag $TAG
+  - cd $TEST_DIR && bash $TEST_SCRIPT 
+after_script:
+  - docker push $REPO
